--- a/E_Advertisement/app/src/main/res/layout/activity_main_screen.xml
+++ b/E_Advertisement/app/src/main/res/layout/activity_main_screen.xml
@@ -21,11 +21,13 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="59dp"
+        android:layout_height="51dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="#42AF5B"
-        app:srcCompat="@drawable/plus" />
+        app:srcCompat="@drawable/plus"
+        tools:layout_editor_absoluteX="309dp"
+        tools:layout_editor_absoluteY="500dp" />
 
 </android.support.design.widget.CoordinatorLayout>
