--- a/E_Advertisement/app/src/main/res/layout/activity_main.xml
+++ b/E_Advertisement/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,8 @@
     android:id="@+id/drawer"
     tools:context="com.example.a37_1.e_advertisement.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAlignment="center"
-            android:text="Main"
-            android:textSize="24dp"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
+    <include layout="@layout/content_main_screen" />
+
 
     <android.support.design.widget.NavigationView
         android:layout_width="match_parent"
