--- a/E_Advertisement/app/src/main/res/layout/content_main_screen.xml
+++ b/E_Advertisement/app/src/main/res/layout/content_main_screen.xml
@@ -19,8 +19,7 @@
             android:id="@+id/news1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="10dp"
-            android:onClick="onClick">
+            android:padding="10dp">
 
             <ImageView
                 android:id="@+id/imageView1"
