--- a/E_Advertisement/app/src/main/res/layout/activity_main.xml
+++ b/E_Advertisement/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- This DrawerLayout has two children at the root  -->
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/drawer"
-    tools:context="com.example.a37_1.e_advertisement.MainActivity">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/content_main_screen" />
-
-
-    <android.support.design.widget.NavigationView
+    <!-- Этот LinearLayout отображает содержимое экрана -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:menu="@menu/nav_menu"
-        android:layout_gravity="start">
+        android:orientation="vertical">
 
-    </android.support.design.widget.NavigationView>
+        <!-- ActionBar отображается сверху -->
+        <include
+            layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <!-- Основной контентный view, куда загружаются фрагменты -->
+        <FrameLayout
+            android:id="@+id/flContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <!-- navigation drawer, который появляется слева -->
+    <!-- Обратите внимание, что `android:layout_gravity` нужно установить в 'start' -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nvView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer_view" />
 </android.support.v4.widget.DrawerLayout>
