--- a/E_Advertisement/app/src/main/res/layout/fragment_fourth.xml
+++ b/E_Advertisement/app/src/main/res/layout/fragment_fourth.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a37_1.e_advertisement.ThirdFragment">
+    tools:context="com.example.a37_1.e_advertisement.FourthFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
