--- a/E_Advertisement/app/src/main/res/menu/drawer_view.xml
+++ b/E_Advertisement/app/src/main/res/menu/drawer_view.xml
@@ -16,16 +16,16 @@
         android:title="@string/elektruka"
         android:icon="@drawable/flash"></item>
 
-    <item android:title="Other">
-        <menu>
-            <group android:checkableBehavior="single">
-                <item
-                    android:icon="@drawable/settings_gears"
-                    android:title="Settings" />
-                <item
-                    android:icon="@drawable/notifications_button"
-                    android:title="Notifications" />
-            </group>
-        </menu>
-    </item>
+    <!--<item android:title="Other">-->
+        <!--<menu>-->
+            <!--<group android:checkableBehavior="single">-->
+                <!--<item-->
+                    <!--android:icon="@drawable/settings_gears"-->
+                    <!--android:title="Settings" />-->
+                <!--<item-->
+                    <!--android:icon="@drawable/notifications_button"-->
+                    <!--android:title="Notifications" />-->
+            <!--</group>-->
+        <!--</menu>-->
+    <!--</item>-->
 </menu>
