--- a/E_Advertisement/app/src/main/res/layout/fragment_third.xml
+++ b/E_Advertisement/app/src/main/res/layout/fragment_third.xml
@@ -7,7 +7,16 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/hello_blank_fragment3"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
 </FrameLayout>
