--- a/E_Advertisement/app/src/main/res/layout/content_main_screen.xml
+++ b/E_Advertisement/app/src/main/res/layout/content_main_screen.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.a37_1.e_advertisement.Main_screen"
-    tools:showIn="@layout/activity_main_screen">
-
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:background="#eeeeee"
