--- a/E_Advertisement/app/src/main/res/layout/activity_andmin_page.xml
+++ b/E_Advertisement/app/src/main/res/layout/activity_andmin_page.xml
@@ -5,17 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.a37_1.e_advertisement.Admin_page">
+    <!-- ActionBar отображается сверху -->
 
     <ScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="162dp">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/include">
 
             <EditText
                 android:id="@+id/ettitle"
@@ -25,13 +31,16 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="15dp"
                 android:ems="10"
-                android:hint="Заголовок"
-                android:inputType="textPersonName" />
+                android:hint="@string/headerTextAdmin"
+                android:inputType="textPersonName"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/include" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
                 android:text="Район:"
                 android:textSize="20dp" />
