--- a/E_Advertisement/app/src/main/res/layout/fragment_first.xml
+++ b/E_Advertisement/app/src/main/res/layout/fragment_first.xml
@@ -2,21 +2,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.a37_1.e_advertisement.FirstFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment1"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="8dp"
-        android:textSize="25sp"
-        android:textAlignment="center"
-        android:layout_marginLeft="8dp"
-        android:textStyle="bold"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp" />
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="#eeeeee"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+
+        <TableRow
+            android:id="@+id/news1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="75dp"
+                android:paddingStart="@dimen/paddingText"
+                android:text="@string/lorem_ip"
+                tools:ignore="RtlSymmetry" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/news2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp">
+
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="75dp"
+                android:paddingStart="@dimen/paddingText"
+                android:text="@string/lorem_ip" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/news3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="75dp"
+                android:paddingStart="@dimen/paddingText"
+                android:text="@string/lorem_ip" />
+        </TableRow>
+    </TableLayout>
 
 </FrameLayout>
