--- a/E_Advertisement/app/src/main/res/layout/fragment_second.xml
+++ b/E_Advertisement/app/src/main/res/layout/fragment_second.xml
@@ -5,19 +5,30 @@
     tools:context="com.example.a37_1.e_advertisement.SecondFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment2"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="8dp"
-        android:textSize="25sp"
-        android:textAlignment="center"
-        android:layout_marginLeft="8dp"
-        android:textStyle="bold"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
- />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/txtView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/hello_blank_fragment2"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
