--- a/E_Advertisement/app/src/main/res/layout/activity_description_new.xml
+++ b/E_Advertisement/app/src/main/res/layout/activity_description_new.xml
@@ -5,24 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.a37_1.e_advertisement.DescriptionNewActivity">
+    <!-- ActionBar отображается сверху -->
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
     <TextView
         android:id="@+id/headerText"
         android:layout_width="344dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="8dp"
-        android:textSize="25sp"
-        android:textAlignment="center"
         android:layout_marginLeft="8dp"
-        android:textStyle="bold"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/headerText"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="wrap_content" />
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
 
     <ScrollView
