--- a/E_Advertisement/app/src/main/res/layout/view_item.xml
+++ b/E_Advertisement/app/src/main/res/layout/view_item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#f1f1f1"
+    android:background="#FFFFFF"
     android:layout_marginBottom="2dp">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="title"
         android:textColor="#4D4D4D"
-        android:textSize="24sp" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/RVcategory"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/RVtitle"
         android:text="@string/Category"
-        android:textSize="9sp"/>
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/RVarea"
