--- a/E_Advertisement/app/src/main/res/layout/fragment_third.xml
+++ b/E_Advertisement/app/src/main/res/layout/fragment_third.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a37_1.e_advertisement.ThirdFragment">
+    tools:context="com.example.a37_1.e_advertisement.Fragments.ThirdFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_news"
