[+] Fnish feature refresh button

--- a/E_Advertisement/app/src/main/res/layout/fragment_second.xml
+++ b/E_Advertisement/app/src/main/res/layout/fragment_second.xml
@@ -1,34 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.a37_1.e_advertisement.SecondFragment">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context="com.example.a37_1.e_advertisement.Fragments.SecondFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_news"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+    </android.support.v7.widget.RecyclerView>
 
-            <TextView
-                android:id="@+id/txtView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/hello_blank_fragment2"
-                android:textSize="14sp"
-                android:textStyle="bold" />
 
-        </LinearLayout>
-    </ScrollView>
 
-</FrameLayout>
+</LinearLayout>
